Hint to use --add-modules=ALL-MODULE-PATH
Without --add-modules=ALL-MODULE-PATH only the required modules for the module specified with `-m` are loaded.